welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:11: error: not found: value setPose
		setPose(x,y+1)
                ^